force-app/main/default/objects/marketevents_c_dmo_IngestionAPI__dlm/marketevents_c_dmo_IngestionAPI__dlm.object-meta.xml
<CustomObject>
    <label>marketevents__c_dmo_IngestionAPI</label>
    <mktDataModelAttributes>
        <creationType>Custom</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>true</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <labelOverride>marketevents__c_dmo_IngestionAPI</labelOverride>
        <masterLabel>marketevents__c_dmo_IngestionAPI</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataModelAttributes>
</CustomObject>