force-app/main/default/objects/marketevents_c_dmo_IngestionAPI__dlm/fields/ConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>ConfidenceScore__c</fullName>
    <label>ConfidenceScore</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ConfidenceScore</labelOverride>
        <masterLabel>ConfidenceScore</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>