force-app/main/default/objects/marketevents_c_dmo_IngestionAPI__dlm/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <label>CreatedDateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>CreatedDateTime</labelOverride>
        <masterLabel>CreatedDateTime</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>