force-app/main/default/objects/marketevents_c_dmo_IngestionAPI__dlm/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Id</labelOverride>
        <masterLabel>Id</masterLabel>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>