force-app/main/default/objects/marketevents_c_dmo_IngestionAPI__dlm/fields/ImpactedArea__c.field-meta.xml
<CustomField>
    <fullName>ImpactedArea__c</fullName>
    <label>ImpactedArea</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>ImpactedArea</labelOverride>
        <masterLabel>ImpactedArea</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>