force-app/main/default/objects/marketevents_c_dmo_IngestionAPI__dlm/fields/InteractionId_ReferThis__c.field-meta.xml
<CustomField>
    <fullName>InteractionId_ReferThis__c</fullName>
    <label>Event_InteractionId</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Event_InteractionId</labelOverride>
        <masterLabel>Event_InteractionId</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>