force-app/main/default/objects/marketevents_c_dmo_IngestionAPI__dlm/fields/RiskOppFlag__c.field-meta.xml
<CustomField>
    <fullName>RiskOppFlag__c</fullName>
    <label>RiskOppFlag</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>RiskOppFlag</labelOverride>
        <masterLabel>RiskOppFlag</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>